# jarvis

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  install.sh  pyproject.toml
jarvis/: __init__.py  bridge.py  cli.py  config.py  download.py  jarvis_brain.py  main.py  session.py  worker.py
jarvis/voice/: __init__.py  stt.py  tts.py
jarvis/web/: app.js  index.html  styles.css
tests/: test_bridge.py  test_prompt_gen.py  test_stt_tts.py  test_worker.py
