[project]
name = "jarvis"
version = "0.1.0"
description = "Jarvis — assistente de desenvolvimento por voz, ponte para o Claude"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.69",
    "claude-agent-sdk>=0.1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "faster-whisper>=1.0",
    "piper-tts>=1.2",
    "numpy>=1.26",
    "soundfile>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
jarvis = "jarvis.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jarvis"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["slow: testes que baixam modelos / rodam inferência"]
